...
    modifier: Modifier = Modifier
) {
    Box(
        modifier = modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.background)
            .testTag("loginScreen")
    ) {
        Column(
            modifier              = Modifier.fillMaxSize().padding(horizontal = 32.dp),
            horizontalAlignment   = Alignment.CenterHorizontally,
            verticalArrangement   = Arrangement.Center
        ) {
            LogoBeatTreat()
            Spacer(modifier = Modifier.height(40.dp))

            Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceEvenly) {
                TabItem(texto = "Sign In", seleccionado = uiState.selectedTab == 0, onClick = { onTabChange(0) })
                TabItem(texto = "Sign Up", seleccionado = uiState.selectedTab == 1, onClick = { onTabChange(1) }, modifier = Modifier.testTag("btnRegistro"))
            }

            Spacer(modifier = Modifier.height(36.dp))

            TextField(
                value         = uiState.email,
...
